@@ -48,7 +48,7 @@ public class StatusCommandletTest extends AbstractIdeContextTest {
     status.run();
 
     // assert
-    assertThat(context).logAtWarning().hasMessage("Skipping check for newer version of IDEasy due to lack of network connectivity.");
+    assertThat(context).logAtWarning().hasMessage("Skipping check for newer version of IDEasy because you are offline.");
   }
 
   /**
